Added localStorage and some projects by default to the browser backend

--- a/index.html
+++ b/index.html
@@ -135,79 +135,8 @@
         <div class="container">
             <h2 class="section-title">Example Projects</h2>
             <p class="section-subtitle">See what others have built with SkillBridge</p>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <div class="project-header">
-                        <span class="project-tag">Web Development</span>
-                        <span class="project-status completed">Completed</span>
-                    </div>
-                    <h3>E-commerce Payment Integration</h3>
-                    <p>Integrated Stripe payment gateway into an existing React application with full checkout flow.</p>
-                    <div class="project-meta">
-                        <span class="project-duration">⏱ 2 weeks</span>
-                        <span class="project-expert">👤 Senior Developer</span>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-header">
-                        <span class="project-tag">Mobile App</span>
-                        <span class="project-status completed">Completed</span>
-                    </div>
-                    <h3>iOS App Bug Fixes</h3>
-                    <p>Fixed critical bugs in Swift application including memory leaks and UI rendering issues.</p>
-                    <div class="project-meta">
-                        <span class="project-duration">⏱ 1 week</span>
-                        <span class="project-expert">👤 iOS Specialist</span>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-header">
-                        <span class="project-tag">Data Analysis</span>
-                        <span class="project-status completed">Completed</span>
-                    </div>
-                    <h3>Data Visualization Dashboard</h3>
-                    <p>Built interactive Python dashboard using Plotly and Dash for real-time business analytics.</p>
-                    <div class="project-meta">
-                        <span class="project-duration">⏱ 3 weeks</span>
-                        <span class="project-expert">👤 Student Developer</span>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-header">
-                        <span class="project-tag">DevOps</span>
-                        <span class="project-status completed">Completed</span>
-                    </div>
-                    <h3>CI/CD Pipeline Setup</h3>
-                    <p>Configured GitHub Actions for automated testing and deployment to AWS infrastructure.</p>
-                    <div class="project-meta">
-                        <span class="project-duration">⏱ 1 week</span>
-                        <span class="project-expert">👤 DevOps Engineer</span>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-header">
-                        <span class="project-tag">Machine Learning</span>
-                        <span class="project-status completed">Completed</span>
-                    </div>
-                    <h3>Sentiment Analysis Model</h3>
-                    <p>Developed and trained NLP model for customer feedback analysis using TensorFlow.</p>
-                    <div class="project-meta">
-                        <span class="project-duration">⏱ 4 weeks</span>
-                        <span class="project-expert">👤 ML Researcher</span>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-header">
-                        <span class="project-tag">Backend</span>
-                        <span class="project-status completed">Completed</span>
-                    </div>
-                    <h3>REST API Development</h3>
-                    <p>Built scalable Node.js REST API with MongoDB database and comprehensive documentation.</p>
-                    <div class="project-meta">
-                        <span class="project-duration">⏱ 2 weeks</span>
-                        <span class="project-expert">👤 Backend Developer</span>
-                    </div>
-                </div>
+            <div class="projects-grid" id="projectsGrid">
+                <!-- Projects will be rendered here by JavaScript -->
             </div>
         </div>
     </section>
