correct small typos

--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
     <!-- Example Projects Section -->
     <section id="projects" class="projects">
         <div class="container">
-            <h2 class="section-title">Example Projects</h2>
-            <p class="section-subtitle">See what others have built with SkillBridge</p>
+            <h2 class="section-title">Projects</h2>
+            <p class="section-subtitle">See what others have built with SkillBridge's help</p>
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-header">
