--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="#projects">Projects</a></li>
                 </ul>
-                <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </button>
+                <div class="header-actions">
+                    <button class="dark-mode-toggle" aria-label="Toggle dark mode" title="Toggle dark mode">☀️</button>
+                    <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </button>
+                </div>
             </div>
         </nav>
     </header>
@@ -255,6 +258,67 @@
         </div>
     </section>
 
+    <!-- Get Started Section -->
+    <section id="submit" class="submit-form">
+        <div class="container">
+            <h2 class="section-title">Get Started</h2>
+            <p class="section-subtitle">Submit your project and get connected with skilled experts</p>
+            <div class="project-form">
+                <form id="projectForm">
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="companyName">Company Name *</label>
+                            <input type="text" id="companyName" name="companyName" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email *</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="skill">Skill Required *</label>
+                            <select id="skill" name="skill" required>
+                                <option value="">-- Select a skill --</option>
+                                <option value="frontend">Frontend Development</option>
+                                <option value="backend">Backend Development</option>
+                                <option value="fullstack">Full-stack Development</option>
+                                <option value="mobile">Mobile App Development</option>
+                                <option value="ui-ux">UI/UX Design</option>
+                                <option value="devops">DevOps</option>
+                                <option value="ml">Machine Learning</option>
+                                <option value="data">Data Analysis</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="duration">Duration *</label>
+                            <input type="text" id="duration" name="duration" placeholder="e.g., 2 weeks" required>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="budget">Budget *</label>
+                        <input type="text" id="budget" name="budget" placeholder="e.g., $500 - $1000" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="description">Project Description *</label>
+                        <textarea id="description" name="description" rows="5" placeholder="Describe your project, requirements, and what you're looking to accomplish..." required></textarea>
+                    </div>
+
+                    <button type="submit" class="btn btn-large" style="background-color: var(--primary-color); color: white; width: 100%;">Submit Project</button>
+                </form>
+                <div id="confirmationMessage" class="confirmation-message" style="display: none;">
+                    <div class="confirmation-content">
+                        <p>✓ Thank you! Your project has been submitted.</p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem; opacity: 0.9;">Our team will review your project and match you with qualified experts shortly.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
